[BeOS]Bug 316494. Restore broken F11-fullscreen feature. p=sergei_d, r=biesi, BeOS-only